[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/kirifont/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/main.gd" type="Script" id=2]
[ext_resource path="res://src/tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/floor.png" type="Texture" id=4]
[ext_resource path="res://src/player.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "floor.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="." groups=[
"tilemap",
]]
tile_set = SubResource( 2 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1114112, 0, 0, -1114111, 0, 0, -1114110, 0, 0, -1114109, 0, 0, -1114108, 0, 0, -1114107, 0, 0, -1114106, 0, 0, -1114105, 0, 0, -1114104, 0, 0, -1114103, 0, 0, -1114102, 0, 0, -1114101, 0, 0, -1114100, 0, 0, -1114099, 0, 0, -1114098, 0, 0, -1114097, 0, 0, -1114096, 0, 0, -1114095, 0, 0, -1114094, 0, 0, -1114093, 0, 0, -1114092, 0, 0, -1114091, 0, 0, -1114090, 0, 0, -1114089, 0, 0, -1114088, 0, 0, -1114087, 0, 0, -1114086, 0, 0, -1114085, 0, 0, -1114084, 0, 0, -1114083, 0, 0, -1114082, 0, 0, -1114081, 0, 0, -1114080, 0, 0, -1114079, 0, 0, -1114078, 0, 0, -1114077, 0, 0, -1114076, 0, 0, -1114075, 0, 0, -1114074, 0, 0, -1114073, 0, 0, -1114072, 0, 0, -1114071, 0, 0, -1114070, 0, 0, -1114069, 0, 0, -1114068, 0, 0, -1114067, 0, 0, -1114066, 0, 0, -1114065, 0, 0, -1114064, 0, 0, -1114063, 0, 0, -1114062, 0, 0, -1114061, 0, 0, -1114060, 0, 0, -1114059, 0, 0, -1114058, 0, 0, -1114057, 0, 0, -1114056, 0, 0, -1114055, 0, 0, -1114054, 0, 0, -1114053, 0, 0, -1114052, 0, 0, -1114051, 0, 0, -1114050, 0, 0, -1114049, 0, 0, -1114048, 0, 0, -1114047, 0, 0, -1114046, 0, 0, -1114045, 0, 0, -1114044, 0, 0, -1114043, 0, 0, -1114042, 0, 0, -1114041, 0, 0, -1114040, 0, 0, -1114039, 0, 0, -1114038, 0, 0, -1114037, 0, 0, -1114036, 0, 0, -1048576, 0, 0, -1048575, 0, 0, -1048574, 0, 0, -1048552, 0, 0, -1048530, 0, 0, -1048529, 0, 0, -1048528, 0, 0, -1048527, 0, 0, -1048526, 0, 0, -1048525, 0, 0, -1048524, 0, 0, -1048523, 0, 0, -1048522, 0, 0, -1048521, 0, 0, -1048520, 0, 0, -1048504, 0, 0, -1048503, 0, 0, -1048502, 0, 0, -1048501, 0, 0, -1048500, 0, 0, -983040, 0, 0, -983039, 0, 0, -983038, 0, 0, -983016, 0, 0, -982994, 0, 0, -982993, 0, 0, -982992, 0, 0, -982991, 0, 0, -982990, 0, 0, -982989, 0, 0, -982988, 0, 0, -982987, 0, 0, -982986, 0, 0, -982985, 0, 0, -982984, 0, 0, -982968, 0, 0, -982967, 0, 0, -982966, 0, 0, -982965, 0, 0, -982964, 0, 0, -917504, 0, 0, -917503, 0, 0, -917502, 0, 0, -917480, 0, 0, -917448, 0, 0, -917437, 0, 0, -917436, 0, 0, -917435, 0, 0, -917434, 0, 0, -917433, 0, 0, -917432, 0, 0, -917431, 0, 0, -917430, 0, 0, -917429, 0, 0, -917428, 0, 0, -851968, 0, 0, -851967, 0, 0, -851966, 0, 0, -851944, 0, 0, -851941, 0, 0, -851940, 0, 0, -851939, 0, 0, -851938, 0, 0, -851937, 0, 0, -851936, 0, 0, -851935, 0, 0, -851934, 0, 0, -851933, 0, 0, -851932, 0, 0, -851931, 0, 0, -851930, 0, 0, -851929, 0, 0, -851928, 0, 0, -851927, 0, 0, -851926, 0, 0, -851925, 0, 0, -851924, 0, 0, -851912, 0, 0, -851901, 0, 0, -851892, 0, 0, -786432, 0, 0, -786431, 0, 0, -786430, 0, 0, -786422, 0, 0, -786412, 0, 0, -786411, 0, 0, -786410, 0, 0, -786409, 0, 0, -786408, 0, 0, -786405, 0, 0, -786388, 0, 0, -786387, 0, 0, -786386, 0, 0, -786385, 0, 0, -786384, 0, 0, -786383, 0, 0, -786382, 0, 0, -786381, 0, 0, -786380, 0, 0, -786376, 0, 0, -786365, 0, 0, -786356, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720869, 0, 0, -720844, 0, 0, -720840, 0, 0, -720839, 0, 0, -720838, 0, 0, -720837, 0, 0, -720836, 0, 0, -720833, 0, 0, -720832, 0, 0, -720831, 0, 0, -720830, 0, 0, -720829, 0, 0, -720820, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 0, 0, -655333, 0, 0, -655308, 0, 0, -655284, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589797, 0, 0, -589772, 0, 0, -589769, 0, 0, -589768, 0, 0, -589767, 0, 0, -589766, 0, 0, -589765, 0, 0, -589764, 0, 0, -589763, 0, 0, -589762, 0, 0, -589761, 0, 0, -589760, 0, 0, -589759, 0, 0, -589758, 0, 0, -589757, 0, 0, -589756, 0, 0, -589755, 0, 0, -589754, 0, 0, -589753, 0, 0, -589752, 0, 0, -589748, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524270, 0, 0, -524269, 0, 0, -524268, 0, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524264, 0, 0, -524263, 0, 0, -524262, 0, 0, -524261, 0, 0, -524220, 0, 0, -524219, 0, 0, -524218, 0, 0, -524217, 0, 0, -524216, 0, 0, -524212, 0, 0, -458752, 0, 0, -458734, 0, 0, -458733, 0, 0, -458732, 0, 0, -458731, 0, 0, -458730, 0, 0, -458729, 0, 0, -458728, 0, 0, -458727, 0, 0, -458726, 0, 0, -458725, 0, 0, -458716, 0, 0, -458715, 0, 0, -458714, 0, 0, -458713, 0, 0, -458712, 0, 0, -458684, 0, 0, -458683, 0, 0, -458682, 0, 0, -458681, 0, 0, -458680, 0, 0, -458679, 0, 0, -458678, 0, 0, -458677, 0, 0, -458676, 0, 0, -393216, 0, 0, -393198, 0, 0, -393197, 0, 0, -393196, 0, 0, -393195, 0, 0, -393194, 0, 0, -393193, 0, 0, -393192, 0, 0, -393191, 0, 0, -393190, 0, 0, -393189, 0, 0, -393172, 0, 0, -393171, 0, 0, -393170, 0, 0, -393169, 0, 0, -393168, 0, 0, -393167, 0, 0, -393166, 0, 0, -393165, 0, 0, -393164, 0, 0, -393163, 0, 0, -393162, 0, 0, -393161, 0, 0, -393160, 0, 0, -393148, 0, 0, -393147, 0, 0, -393146, 0, 0, -393145, 0, 0, -393144, 0, 0, -393140, 0, 0, -327680, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327654, 0, 0, -327653, 0, 0, -327624, 0, 0, -327612, 0, 0, -327611, 0, 0, -327610, 0, 0, -327609, 0, 0, -327608, 0, 0, -327604, 0, 0, -262144, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, -262118, 0, 0, -262117, 0, 0, -262116, 0, 0, -262115, 0, 0, -262114, 0, 0, -262113, 0, 0, -262112, 0, 0, -262088, 0, 0, -262087, 0, 0, -262086, 0, 0, -262085, 0, 0, -262084, 0, 0, -262083, 0, 0, -262082, 0, 0, -262081, 0, 0, -262076, 0, 0, -262075, 0, 0, -262074, 0, 0, -262073, 0, 0, -262072, 0, 0, -262068, 0, 0, -196608, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196552, 0, 0, -196551, 0, 0, -196550, 0, 0, -196549, 0, 0, -196548, 0, 0, -196540, 0, 0, -196539, 0, 0, -196538, 0, 0, -196537, 0, 0, -196536, 0, 0, -196532, 0, 0, -131072, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131016, 0, 0, -131015, 0, 0, -131014, 0, 0, -131013, 0, 0, -131012, 0, 0, -131004, 0, 0, -131003, 0, 0, -131002, 0, 0, -131001, 0, 0, -131000, 0, 0, -130998, 0, 0, -130996, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65530, 0, 0, -65529, 0, 0, -65526, 0, 0, -65525, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65509, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65460, 0, 0, 0, 0, 0, 16, 0, 0, 17, 0, 0, 27, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 68, 0, 0, 69, 0, 0, 70, 0, 0, 71, 0, 0, 72, 0, 0, 76, 0, 0, 65536, 0, 0, 65563, 0, 0, 65592, 0, 0, 65593, 0, 0, 65604, 0, 0, 65605, 0, 0, 65606, 0, 0, 65607, 0, 0, 65608, 0, 0, 65612, 0, 0, 131072, 0, 0, 131099, 0, 0, 131118, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 0, 0, 131122, 0, 0, 131123, 0, 0, 131124, 0, 0, 131125, 0, 0, 131126, 0, 0, 131127, 0, 0, 131128, 0, 0, 131129, 0, 0, 131131, 0, 0, 131132, 0, 0, 131133, 0, 0, 131134, 0, 0, 131135, 0, 0, 131136, 0, 0, 131137, 0, 0, 131138, 0, 0, 131139, 0, 0, 131140, 0, 0, 131141, 0, 0, 131142, 0, 0, 131143, 0, 0, 131144, 0, 0, 131147, 0, 0, 131148, 0, 0, 196608, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196654, 0, 0, 196680, 0, 0, 196684, 0, 0, 262144, 0, 0, 262190, 0, 0, 262216, 0, 0, 262220, 0, 0, 327680, 0, 0, 327717, 0, 0, 327718, 0, 0, 327719, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 327723, 0, 0, 327724, 0, 0, 327725, 0, 0, 327726, 0, 0, 327752, 0, 0, 327753, 0, 0, 327756, 0, 0, 393216, 0, 0, 393262, 0, 0, 393266, 0, 0, 393270, 0, 0, 393274, 0, 0, 393278, 0, 0, 393282, 0, 0, 393286, 0, 0, 393288, 0, 0, 393292, 0, 0, 458752, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458798, 0, 0, 458800, 0, 0, 458804, 0, 0, 458808, 0, 0, 458812, 0, 0, 458816, 0, 0, 458820, 0, 0, 458824, 0, 0, 458828, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 0, 0, 524334, 0, 0, 524335, 0, 0, 524336, 0, 0, 524337, 0, 0, 524338, 0, 0, 524339, 0, 0, 524340, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524344, 0, 0, 524345, 0, 0, 524346, 0, 0, 524347, 0, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 524354, 0, 0, 524355, 0, 0, 524356, 0, 0, 524357, 0, 0, 524358, 0, 0, 524359, 0, 0, 524360, 0, 0, 524361, 0, 0, 524362, 0, 0, 524363, 0, 0, 524364, 0, 0 )

[node name="tree" parent="." instance=ExtResource( 3 )]
position = Vector2( 824, 512 )
shakes = 1
spawnDog = false

[node name="tree3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1184, 192 )
spawnDog = false

[node name="tree4" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, -64 )
shakes = 5
spawnDog = false

[node name="tree45" parent="." instance=ExtResource( 3 )]
position = Vector2( 704, -64 )
shakes = 2
spawnDog = false

[node name="tree14" parent="." instance=ExtResource( 3 )]
position = Vector2( 672, -768 )
shakes = 20
spawnDog = false

[node name="tree17" parent="." instance=ExtResource( 3 )]
position = Vector2( 1424, -768 )
shakes = 2

[node name="tree5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1888, -256 )
shakes = 2
spawnDog = false

[node name="tree6" parent="." instance=ExtResource( 3 )]
position = Vector2( 2592, -448 )
shakes = 1
spawnDog = false

[node name="tree7" parent="." instance=ExtResource( 3 )]
position = Vector2( 2344, -448 )
shakes = 2

[node name="tree8" parent="." instance=ExtResource( 3 )]
position = Vector2( 2464, -64 )
shakes = 2
spawnDog = false

[node name="tree12" parent="." instance=ExtResource( 3 )]
position = Vector2( 2008, 512 )
spawnDog = false

[node name="tree13" parent="." instance=ExtResource( 3 )]
position = Vector2( 2848, 512 )
spawnDog = false

[node name="tree9" parent="." instance=ExtResource( 3 )]
position = Vector2( 3160, 128 )
shakes = 5
spawnDog = false

[node name="tree10" parent="." instance=ExtResource( 3 )]
position = Vector2( 3424, 128 )
shakes = 1

[node name="tree11" parent="." instance=ExtResource( 3 )]
position = Vector2( 4144, 128 )
shakes = 20

[node name="tree15" parent="." instance=ExtResource( 3 )]
position = Vector2( 4776, 512 )
shakes = 5

[node name="tree16" parent="." instance=ExtResource( 3 )]
position = Vector2( 4768, -128 )
shakes = 10
spawnDog = false

[node name="tree18" parent="." instance=ExtResource( 3 )]
position = Vector2( 4768, -448 )
shakes = 5
spawnDog = false

[node name="tree30" parent="." instance=ExtResource( 3 )]
position = Vector2( 4168, -704 )
shakes = 1

[node name="tree32" parent="." instance=ExtResource( 3 )]
position = Vector2( 4456, -896 )
shakes = 2
spawnDog = false

[node name="tree31" parent="." instance=ExtResource( 3 )]
position = Vector2( 3760, -704 )
shakes = 1
spawnDog = false

[node name="tree19" parent="." instance=ExtResource( 3 )]
position = Vector2( 2296, -832 )
shakes = 1
spawnDog = false

[node name="tree25" parent="." instance=ExtResource( 3 )]
position = Vector2( 2192, -832 )
shakes = 1
spawnDog = false

[node name="tree26" parent="." instance=ExtResource( 3 )]
position = Vector2( 2088, -832 )
shakes = 1

[node name="tree27" parent="." instance=ExtResource( 3 )]
position = Vector2( 1984, -832 )
shakes = 1

[node name="tree28" parent="." instance=ExtResource( 3 )]
position = Vector2( 1880, -832 )
shakes = 1

[node name="tree29" parent="." instance=ExtResource( 3 )]
position = Vector2( 1776, -832 )
shakes = 1
spawnDog = false

[node name="tree20" parent="." instance=ExtResource( 3 )]
position = Vector2( 2400, -832 )
shakes = 1

[node name="tree21" parent="." instance=ExtResource( 3 )]
position = Vector2( 2504, -832 )
shakes = 1
spawnDog = false

[node name="tree22" parent="." instance=ExtResource( 3 )]
position = Vector2( 2608, -832 )
shakes = 1

[node name="tree23" parent="." instance=ExtResource( 3 )]
position = Vector2( 2712, -832 )
shakes = 1
spawnDog = false

[node name="tree24" parent="." instance=ExtResource( 3 )]
position = Vector2( 2816, -832 )
shakes = 1
spawnDog = false

[node name="tree33" parent="." instance=ExtResource( 3 )]
position = Vector2( 4384, 448 )
shakes = 1
spawnDog = false

[node name="tree34" parent="." instance=ExtResource( 3 )]
position = Vector2( 3744, 384 )
shakes = 1
spawnDog = false

[node name="tree35" parent="." instance=ExtResource( 3 )]
position = Vector2( 3488, 384 )
shakes = 1

[node name="tree36" parent="." instance=ExtResource( 3 )]
position = Vector2( 4256, 384 )
shakes = 1

[node name="tree44" parent="." instance=ExtResource( 3 )]
position = Vector2( 3232, 384 )
shakes = 1

[node name="tree37" parent="." instance=ExtResource( 3 )]
position = Vector2( 4000, 384 )
shakes = 1

[node name="tree38" parent="." instance=ExtResource( 3 )]
position = Vector2( 3360, 448 )
shakes = 1
spawnDog = false

[node name="tree39" parent="." instance=ExtResource( 3 )]
position = Vector2( 3104, 448 )
shakes = 1

[node name="tree40" parent="." instance=ExtResource( 3 )]
position = Vector2( 3616, 448 )
shakes = 1
spawnDog = false

[node name="tree41" parent="." instance=ExtResource( 3 )]
position = Vector2( 4128, 448 )
shakes = 1

[node name="tree42" parent="." instance=ExtResource( 3 )]
position = Vector2( 4512, 384 )
shakes = 1
spawnDog = false

[node name="tree43" parent="." instance=ExtResource( 3 )]
position = Vector2( 3872, 448 )
shakes = 1
spawnDog = false

[node name="tree2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1552, 448 )

[node name="Timer" type="Timer" parent="."]

[node name="controls" type="RichTextLabel" parent="."]
anchor_left = 0.086
anchor_top = 0.042
anchor_right = 0.211
anchor_bottom = 0.083
margin_left = 80.0
margin_top = 336.0
margin_right = 568.0
margin_bottom = 432.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "A/D or Left/Right: Move
W/Up: Jump
E/S/Down: Shake Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blurb" type="RichTextLabel" parent="."]
anchor_left = 0.086
anchor_top = 0.042
anchor_right = 0.211
anchor_bottom = 0.083
margin_left = 80.0
margin_top = 248.0
margin_right = 568.0
margin_bottom = 344.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Ms. Jenkins lost all her cats. 
Go get them.
Avoid the dogs.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="scoreLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 80.0
margin_top = 34.0
margin_right = 208.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeLabel" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.086
anchor_top = 0.042
anchor_right = 0.211
anchor_bottom = 0.083
margin_left = -8.00001
margin_top = 30.0
margin_right = 7.0
margin_bottom = 40.192
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Time: 180"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 96, 512 )

[node name="Camera2D" type="Camera2D" parent="player"]
offset = Vector2( 0, -200 )
current = true
limit_left = 0
limit_top = -888
limit_right = 4928
limit_bottom = 776
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
